--- a/zenia-app/index.html
+++ b/zenia-app/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/bird.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/zeniaLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zenia</title>
+    <!-- Preconnect para mejorar rendimiento de fuentes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Metatags para rendimiento -->
+    <meta name="description" content="Proyecto Zenia - Información para visitantes del Hospital Civil de Guadalajara">
+    <title>Zenia - Hospital Civil Guadalajara</title>
   </head>
   <body>
     <div id="root"></div>
